--- a/src/App.css
+++ b/src/App.css
@@ -9,24 +9,8 @@
   grid-template-columns: 2fr 10fr;
   grid-gap: 10px;
 }
-.header {
-  grid-area: h;
-  background-color: #00fd4c;
-}
-.header img {
-  width: 50px;
-}
-.nav {
-  grid-area: n;
-  background-color: #00fd4c;
-}
-.content {
+.app-wrapper-content {
   grid-area: c;
   background-color: #5e6dc0;
 }
-.content img {
-  max-width: 100%; /* Максимальная ширина картинки - 100% от родительского блока */
-  max-height: 100%; /* Максимальная высота картинки - 100% от родительского блока */
-  display: block; /* Убирает пробелы вокруг картинки */
-  margin: auto; /* Выравнивание картинки по центру */
-}
+
